--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,38 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output
-/dist
-/tmp
+# Proyecto
+api/node_modules/
+angular-client/node_modules/
+api/uploads
+
+/node_modules/
+
+# Compiled output
+/**/dist
+/**/tmp
 /out-tsc
 # Only exists if Bazel was run
-/bazel-out
+/**/bazel-out
 
-# dependencies
-/node_modules
+# Cordova
+/**/www
+/**/plugins
+/**/platforms
 
-# profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
+# Electron
+/**/dist.electron
+/**/electron.main.js
 
 # IDEs and editors
-/.idea
+.idea/*
+!.idea/runConfigurations/
+!.idea/codeStyleSettings.xml
 .project
 .classpath
 .c9/
 *.launch
 .settings/
+xcuserdata/
 *.sublime-workspace
 
 # IDE - VSCode
@@ -29,18 +41,28 @@ speed-measure-plugin*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
+# Maven
+/**/target
+/**/log
+
+# Misc
+/**/.sass-cache
+/**/connect.lock
+/**/coverage
+/**/libpeerconnection.log
 npm-debug.log
 yarn-error.log
 testem.log
-/typings
+/**/typings
+/**/reports
+/**/src/translations/template.*
+/**/src/environments/.env.*
+
+# Generated doc
+/**/docs/generated
 
 # System Files
 .DS_Store
 Thumbs.db
+/**/nbproject/private/
