--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@ngrx/entity": "^10.1.0",
     "@ngrx/store": "^10.1.0",
     "@ngrx/store-devtools": "^10.1.0",
+    "@types/ramda": "^0.27.34",
     "bulma-accordion": "^2.0.1",
     "clone": "^2.1.2",
+    "ramda": "^0.27.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -37,7 +39,7 @@
     "@ngrx/schematics": "^10.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.9",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
